objects/Ticket_Type__c/Ticket_Type__c.object-meta.xml
<CustomObject>
    <description>Represents a ticket tier or category (e.g. VIP, General Admission, Early Bird) with defined price and inventory quota.</description>
    <label>Ticket Type</label>
    <nameField>
        <label>Ticket Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>