objects/Ticket_Type__c/fields/Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>Available_Seats__c</fullName>
    <description>Calculated remaining capacity for this ticket type</description>
    <formula>Quota__c - BLANKVALUE(Booked_Seats__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>