objects/Ticket_Type__c/fields/Booked_Seats__c.field-meta.xml
<CustomField>
    <fullName>Booked_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of seats booked against this ticket type, written by RegistrationTriggerHandler</description>
    <label>Booked Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>