objects/Ticket_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Inclusions or restrictions for this ticket tier</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>