objects/Ticket_Type__c/validationRules/No_Price_Change_After_Registration_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Price_Change_After_Registration_Open</fullName>
    <active>true</active>
    <description>Locks ticket price once event registration has opened.</description>
    <errorConditionFormula>ISCHANGED(Price__c) &amp;&amp; ISPICKVAL(Event__r.Registration_Status__c, &quot;Open&quot;)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Ticket price cannot be modified after registration has opened.</errorMessage>
</ValidationRule>