objects/Ticket_Type__c/validationRules/Quota_Not_Below_Booked_Seats.validationRule-meta.xml
<ValidationRule>
    <fullName>Quota_Not_Below_Booked_Seats</fullName>
    <active>true</active>
    <description>Ensures quota cannot be reduced below the count of already booked seats.</description>
    <errorConditionFormula>Quota__c &lt; Booked_Seats__c</errorConditionFormula>
    <errorDisplayField>Quota__c</errorDisplayField>
    <errorMessage>Ticket quota cannot be reduced below the number of already booked seats.</errorMessage>
</ValidationRule>